feat: implemented evidence and attachment management
